test/bad/functions/return03.px

func f(): Void def
    return 'r'

f()
